--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <form 
   method="POST" 
-  action="YOUR_WEBAPP_URL"
+  action="https://script.google.com/macros/s/AKfycbxGFwl4-hNfk77Nf0YKMXvK2C8lggrLSgHQPmK-TS3N1D36pEfFzJSkj83B6NVIib53/exec"
 >
   <input name="Email" type="email" placeholder="Email" required>
   <input name="Name" type="text" placeholder="Name" required>
