--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 	</br><h1>Hardwood Creek Adult Program Survey</h1>
 
 	<!-- Create Form -->
-	<form id="form" form onsubmit="setTimeout(function(){window.location.reload();},10);"   action="https://script.google.com/macros/s/AKfycbxGFwl4-hNfk77Nf0YKMXvK2C8lggrLSgHQPmK-TS3N1D36pEfFzJSkj83B6NVIib53/exec"
+	<form id="form" <!--onsubmit="setTimeout(function(){window.location.reload();},10);"-->   action="https://script.google.com/macros/s/AKfycbxGFwl4-hNfk77Nf0YKMXvK2C8lggrLSgHQPmK-TS3N1D36pEfFzJSkj83B6NVIib53/exec"
  method="POST">
 
 		<!-- Details -->
